--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
             <div class="sub-segment">
                 <h3>MACABRA</h3>
                 <div class="gallery">
+                     <div class="multi-segment-gallery gallery">
+                                    <video controls>
+                                        <source src="img/biciangel web.mp4" type="video/mp4">
+                                        Tu navegador no soporta el elemento de video.
+                                    </video>
                     <img src="img/Macabra.jpg" alt="Porter Negra">
-                    <img src="img/maridar1.png" alt="Mantra">
                 </div>
                 <div class="sub-segment">
                     <h3>DON TOMATE</h3>
