--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header id="header">
         <div id="logo">
             <a href="index.html">
-                <img src="img/Mesa de trabajo 1.png" alt="Logo de la empresa">
+                <img src="img/Logo aura ojoMesa de trabajo 1.svg" alt="Logo de la empresa">
             </a>
         </div>
         <nav id="nav">
